# co-bot

./: .gitignore  Cargo.toml  Makefile  README.md  co-bot.toml  dprint.json  git-town.toml  run-that-app
.github/workflows/: release.yml
src/: cli.rs  config.rs  errors.rs  logger.rs  main.rs  subshell.rs
src/commands/: mod.rs  run.rs
src/config/: config.rs  data.rs  file.rs  load.rs  mod.rs
src/connectors/: github.rs  mod.rs
src/domain/: issue_id.rs  issue_id_or_url.rs  mod.rs  ticket.rs  ticket_id.rs  ticket_id_or_url.rs  ticket_title.rs
src/git/: create_branch.rs  create_workspace.rs  mod.rs  workspace.rs  workspace_path.rs
src/trackers/: github.rs  issue_id.rs  mod.rs
tools/: rta  rta@0.30.0
